unittests/testclassifier.cpp
@@ -18,14 +18,22 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-#include "TEST_classifier.h"
+#include "testclassifier.h"
 
 // app include
 #include "uml.h"
 #include "classifier.h"
 
-const bool IS_NOT_IMPL = false;
+#define IS_NOT_IMPL() QSKIP("not implemented yet", SkipSingle)
 //-----------------------------------------------------------------------------
+
+//#define RUN_ALL
+
+#ifdef RUN_ALL
+#undef QCOMPARE
+#define QCOMPARE(actual, expected) \
+    QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__)
+#endif
 
 void TEST_classifier::test_equal()
 {
@@ -33,10 +41,10 @@ void TEST_classifier::test_equal()
     UMLClassifier* b = a;
     UMLClassifier* c = new UMLClassifier("Test A", Uml::ID::None);
     UMLClassifier* d = new UMLClassifier("Test B", Uml::ID::None);
-    QCOMPARE(a == b, true);
-    QCOMPARE(a == c, true);
-    QCOMPARE(b == c, true);
-    QCOMPARE(c == d, false);
+    QCOMPARE(*a == *b, true);
+    QCOMPARE(*a == *c, true);
+    QCOMPARE(*b == *c, true);
+    QCOMPARE(*c == *d, false);
 }
 
 void TEST_classifier::test_copyInto()
@@ -44,15 +52,14 @@ void TEST_classifier::test_copyInto()
     UMLClassifier* a = new UMLClassifier("Test A", Uml::ID::None);
     UMLClassifier* b = new UMLClassifier("Test B", Uml::ID::None);
     b->copyInto(a);
-    QCOMPARE(a == b, true);
+    QCOMPARE(*a == *b, true);
 }
 
 void TEST_classifier::test_clone()
 {
     UMLClassifier* a = new UMLClassifier("Test A", Uml::ID::None);
-    UMLClassifier* b;
-    b = static_cast<UMLClassifier*>(a->clone());
-    QCOMPARE(a == b, true);
+    UMLClassifier* b = a->clone()->asUMLClassifier();
+    QCOMPARE(*a == *b, true);
 }
 
 void TEST_classifier::test_addAttributeWithType()
@@ -60,186 +67,216 @@ void TEST_classifier::test_addAttributeWithType()
     UMLClassifier* a = new UMLClassifier("Test A", Uml::ID::None);
     UMLAttribute* attrA = a->addAttribute("attributeA_", Uml::ID::None);
     /* UMLAttribute* attrB = */ a->addAttribute("attributeB_", Uml::ID::None);
-    int num1 = a->attributes();
+    int num1 = a->getAttributeList().count();
     QCOMPARE(num1, 2);
     int num2 = a->removeAttribute(attrA);
     QCOMPARE(num2, 1);  // one deleted
-    int num3 = a->attributes();
+    int num3 = a->getAttributeList().count();
     QCOMPARE(num3, num1 - 1);
 }
 
 void TEST_classifier::test_addAttributeWithObject()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_addAttributeWithAttribute()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_removeAndCountAttribute()
 {
     UMLClassifier* a = new UMLClassifier("Test A", Uml::ID::None);
-    int num0 = a->attributes();
+    int num0 = a->getAttributeList().count();
     QCOMPARE(num0, 0);  // no attributes present yet
     /*UMLAttribute* attrA = */ a->addAttribute("attributeA_", Uml::ID::None);
     UMLAttribute* attrB = a->addAttribute("attributeB_", Uml::ID::None);
     UMLAttribute* attrC = a->addAttribute("attributeC_", Uml::ID::None);
     /* UMLAttribute* attrD = */ a->addAttribute("attributeD_", Uml::ID::None);
-    int num1 = a->attributes();
+    int num1 = a->getAttributeList().count();
     QCOMPARE(num1, 4);
     int num2 = a->removeAttribute(attrB);
-    QCOMPARE(num2, 1);  // one deleted
+    QCOMPARE(num2, 3);  // one deleted
     num2 = a->removeAttribute(attrC);
-    QCOMPARE(num2, 1);  // one deleted
-    int num3 = a->attributes();
+    QCOMPARE(num2, 2);  // one deleted
+    int num3 = a->getAttributeList().count();
     QCOMPARE(num3, 2); 
 }
 
 void TEST_classifier::test_getAttributeList()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_addOperationWithPosition()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_addOperationWithLog()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_checkOperationSignature()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_removeAndCountOperation()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_getOperationList()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_addTemplateWithType()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_addTemplateWithLog()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_addTemplateWithPosition()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_removeAndCountTemplate()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_findTemplate()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_getTemplateList()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_takeItem()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_getFilteredList()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_resolveRef()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_findOperations()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_findChildObjectById()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_findOperation()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_findSuperClassConcepts()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_findSubClassConcepts()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_setGetClassAssoc()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_setBaseType()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_isInterface()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_isDatatype()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_setGetOriginType()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_setGetIsReference()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_hasAbstractOps()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_makeChildObject()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 void TEST_classifier::test_getUniAssociationToBeImplemented()
 {
-    QCOMPARE(IS_NOT_IMPL, true);
+    IS_NOT_IMPL();
 }
 
 QTEST_MAIN(TEST_classifier)
+
+class A {
+public:
+    A(int a) :_a(a) {}
+    bool operator ==(const A & rhs) const
+    {
+        fprintf(stderr, "%s\n", __PRETTY_FUNCTION__);
+        return _a == rhs._a;
+    }
+private:
+    int _a;
+};
+
+
+#if 0
+int main(int argc, char **argv)
+{
+
+//    A a(5);
+//    A b(2);
+//    A c(a);
+//    printf("%d\n", a == b);
+//    printf("%d\n", a == c);
+
+    QApplication app(argc, argv);
+    TEST_classifier z;
+    z.initTestCase();
+    z.test_equal();
+}
+#endif
